--- a/index.html
+++ b/index.html
@@ -19,30 +19,46 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+      <pre><code>&lt;!-- Main jumbotron for a primary marketing message or call to action --&gt;
+&lt;div class="jumbotron"&gt;
+    &lt;div class="container"&gt;
+        &lt;h1&gt;What Can I Play ?&lt;/h1&gt;
+    &lt;/div&gt;
+&lt;/div&gt;
+&lt;div class="container" ng-controller="WtpDurationsController"&gt;
+    &lt;!-- Example row of columns --&gt;
+    &lt;div class="row"&gt;
+        &lt;select name="singleSelect" ng-model="currPlatform"&gt;
+            &lt;option value="" disabled selected style="display:none;"&gt;In which platform?&lt;/option&gt;
+            &lt;!-- not selected / blank option --&gt;
+            &lt;option ng-repeat="platform in platforms" value="{{platform.value}}"&gt;{{platform.label}}&lt;/option&gt;
+        &lt;/select&gt;
+        &lt;span&gt;I want to play at least&lt;/span&gt; &lt;input type="number" ng-model="minHours" style="width: 40px"/&gt;&lt;span&gt;but no more than&lt;/span&gt; &lt;input type="number" ng-model="maxHours" style="width: 40px"/&gt;&lt;span&gt;hours&lt;/span&gt;
+        &lt;div class="table-responsive"&gt;
+            &lt;table class="table table-striped"&gt;
+                &lt;thead&gt;
+                    &lt;tr&gt;
+                        &lt;th&gt;Name&lt;/th&gt;
+                        &lt;th&gt;Duration&lt;/th&gt;
+                    &lt;/tr&gt;
+                &lt;/thead&gt;
+                &lt;tbody ng-repeat="game in games"&gt;
+                    &lt;tr&gt;
+                        &lt;td ng-bind="game.name" /&gt;
+                        &lt;td ng-bind="game.duration" /&gt;
+                    &lt;/tr&gt;
+                &lt;/tbody&gt;
+            &lt;/table&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
+    &lt;hr&gt;
+&lt;/div&gt;
+&lt;!-- /container --&gt;
+&lt;script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"&gt;&lt;/script&gt;
+&lt;script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"&gt;&lt;/script&gt;
+&lt;script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"&gt;&lt;/script&gt;
+&lt;script type="text/javascript" src="js/index.js"&gt;&lt;/script&gt;
+</code></pre>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/pedrolsamaral/what-to-play">What-to-play</a> is maintained by <a href="https://github.com/pedrolsamaral">pedrolsamaral</a>.</span>
