--- a/index.html
+++ b/index.html
@@ -11,22 +11,17 @@
     <title>What can I play</title>
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-    <script>
-    (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-66575529-1', 'auto');
-    ga('send', 'pageview');
-    </script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-66575529-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 
 <body>
@@ -44,9 +39,7 @@
                 <!-- not selected / blank option -->
                 <option ng-repeat="platform in platforms" value="{{platform.value}}">{{platform.label}}</option>
             </select>
-            <span>I want to play at least</span>
-            <input type="number" ng-model="minHours" style="width: 40px" /><span>but no more than</span>
-            <input type="number" ng-model="maxHours" style="width: 40px" /><span>hours</span>
+            <span>I want to play at least</span> <input type="number" ng-model="minHours" style="width: 40px"/><span>but no more than</span> <input type="number" ng-model="maxHours" style="width: 40px"/><span>hours</span>
             <div class="table-responsive">
                 <table class="table table-striped">
                     <thead>
