Fixed DS retrieval error

--- a/wtp-webapp/src/main/webapp/index.html
+++ b/wtp-webapp/src/main/webapp/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <title>What can I play</title>
     <!-- Bootstrap core CSS -->
-    <link href="webjars/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -49,9 +49,9 @@
         <hr>
     </div>
     <!-- /container -->
-    <script src="webjars/angularjs/1.4.3/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="webjars/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 
